@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<GCompris>
+  <Board type="python:connect4"
+     section="/strategy"
+     name="connect4-2players"
+     icon="boardicons/connect4.png"
+     difficulty="2"
+     boarddir="connect4"
+     mode="2players"
+	 author="Laurent Lacheny (laurent.lacheny@wanadoo.fr) / Miguel de Izarra (miguel2i@free.fr)">
+     <_title>Connect 4 (2 Players)</_title>
+     <_description>Arrange four coins in a row</_description>
+     <_prerequisite>Mouse-manipulation</_prerequisite>
+     <_goal>Create a line of 4 pieces either horizontally (lying down) or vertically (standing up)</_goal>
+     <_manual>Click anywhere in the line where you want to drop a piece. Alternatively, you can use the arrow keys to move and the down, or space key to drop a piece.</_manual>
+     <_credit>The original code was written in 2005 by Laurent Lacheny. In 2006, Miguel de Izarra made the two players game. Images and Artificial Intelligence taken from project 4stattack by Jeroen Vloothuis. The original project can be found on &lt;http://forcedattack.sourceforge.net&gt;</_credit>
+  </Board>
+</GCompris>
