@@ -11,7 +11,7 @@
          <_description>Arrange four coins in a row</_description>
 	<_prerequisite>Mouse-manipulation</_prerequisite>
 	<_goal>Create a line of 4 pieces either horizontally (lying down) or vertically (standing up)</_goal>
-	<_manual>Click anywhere in the line where you want to drop a piece</_manual>
+        <_manual>Click anywhere in the line where you want to drop a piece. Alternatively, you can use the arrow keys to move and the down, or space key to drop a piece.</_manual>
         <_credit>Laurent Lacheny. Images and Artificial Intelligence taken from project 4stattack by Jeroen Vloothuis. The original project can be found on &lt;http://forcedattack.sourceforge.net&gt;</_credit>
   </Board>
 </GCompris>
