@@ -67,6 +67,7 @@ boards/colors.xml.in
 boards/colors_group.xml.in
 boards/computer.xml.in
 boards/connect4.xml.in
+boards/connect4-2players.xml.in
 boards/crane.xml.in
 boards/discovery.xml.in
 boards/doubleentry.xml.in
